...
}

@Preview
@Composable
private fun EmptyStateWithActionsPreview() = PreviewThemed(darkTheme = false) {
    EmptyState(
        title = "No notes yet",
        subtitle = "Create your first note to get started",
        actions = {
            FilledTonalButton(onClick = noopClick) {
                Text("Create your first note")
            }
        },
...
